[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UpgradeMenu.gd" type="Script" id=1]

[node name="UpgradeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.486275, 0.388235, 0.494118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -40.5
margin_right = 77.0
margin_bottom = 40.5
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floatstone" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.255
margin_top = -238.999
margin_right = -141.255
margin_bottom = -201.999
placeholder_text = "Floatstone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AethericIron" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -240.107
margin_right = 87.0
margin_bottom = -203.107
placeholder_text = "Aetheric iron"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Celestium" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.147
margin_top = -242.323
margin_right = 314.147
margin_bottom = -205.323
placeholder_text = "Celestium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Azulite" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.019
margin_top = -155.896
margin_right = -26.0195
margin_bottom = -118.896
placeholder_text = "Azulite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkyRuby" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 28.2356
margin_top = -157.004
margin_right = 202.236
margin_bottom = -120.004
placeholder_text = "Sky ruby"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
